--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,13 @@
 <html>
 
 <body>
-This is my bio! Meet me!
+Hi!  My name is Emma Hershey and I am a senior studying computer science and math with a minor in music at Tufts University.  When I'm not working on my web programming homework, you can catch me singing with the Tufts Jazz Orchestra or with Tufts sQ!, a co-ed a cappella group.
+<p>Here are some fun facts about me:
+<ul>
+	<li>I am a die-hard Patriots fan.</li>
+	<li>I volunteer as a medical translator for a surgical team in Peru annually.</li>
+	<li>I once raced in the National Toboggan Championships with my family on a home-made sled.</li>
+</ul>	
 </body>
 
 </html>
