--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+<head>
+	<title>Emma Hershey</title>
+	<meta name="Emma Hershey" />
+</head>
 
 <body>
 Hi!  My name is Emma Hershey and I am a senior studying computer science and math with a minor in music at Tufts University.  When I'm not working on my web programming homework, you can catch me singing with the Tufts Jazz Orchestra or with Tufts sQ!, a co-ed a cappella group.
