--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Emma Hershey</title>
-	<meta name="Emma Hershey" />
+	<meta name="author" content="Emma Hershey" >
 </head>
 
 <body>
